--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,11 @@ Version 10.1 (TBD)
    **• Now has a dedicated installer
    **• Easier resizing of images before insertion
    **• Pressing CTRL+S on character editor and dictionary now saves the notebook
+   • Display shortcut keys on menus
+   • Added tons of shortcut keys to make all across the program
+   • TAB to increase indent and SHIFT + TAB to decrease indent
+   • Allow the adjustment of bullet indent
+   • Add "New Window" menu item to easily open a new Language Pad window
    **• Add options to wrap selected text in brackets [] and // 
    **• Zoom in increments of 0.1
    • Major refactoring to have a more consistent naming scheme and remove old junk code
