--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,20 +1,24 @@
-Version 10.1 (TBD)
+Version 10.2 (TBD)
    **• Export pages to Markdown
    **• Export dictionary to Markdown
    **• Copy text as Markdown
    **• Now has a dedicated installer
+
+Version 10.1 (April 12)
    **• Easier resizing of images before insertion
    **• Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
    • Added tons of shortcut keys to make all across the program
    • TAB to increase indent and SHIFT + TAB to decrease indent
    • Allow the adjustment of bullet indent
-   • Add "New Window" menu item to easily open a new Language Pad window
-   **• Add options to wrap selected text in brackets [] and // 
-   **• Zoom in increments of 0.1
+   • Support hanging indent
+   • Add "New Window" menu item to easily open a new Language Pad instance
+   **• Add options to wrap selected text in brackets [] and // or remove brackets
+   • Zoom in increments of 0.2 (a less drastic jump)
    • Major refactoring to have a more consistent naming scheme and remove old junk code
    • Bug Fix: Word count wouldn't update automatically when opening a new file
    • Bug Fix: Pages with the same name couldn't be imported without changing the name
+   • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
 
 ﻿Version 10.0 (April 8, 2020)
    • Full HiDPI support
