--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 10.1 (April 12)
    • TAB to increase indent and SHIFT + TAB to decrease indent
    • Allow the adjustment of bullet indent
    • Support hanging indent
+   • Reset indent menu option
    • Add "New Window" menu item to easily open a new Language Pad instance
    **• Add options to wrap selected text in brackets [] and // or remove brackets
    • Zoom in increments of 0.2 (a less drastic jump)
