--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,7 +5,7 @@ Version 10.2 (TBD)
    **• Now has a dedicated installer
 
 Version 10.1 (April 12)
-   **• Easier resizing of images before insertion
+   • Easier resizing of images before insertion
    **• Pressing CTRL+S on character editor and dictionary now saves the notebook
    • Display shortcut keys on menus
    • Added tons of shortcut keys to make all across the program
@@ -14,6 +14,7 @@ Version 10.1 (April 12)
    • Support hanging indent
    • Reset indent menu option
    • Add "New Window" menu item to easily open a new Language Pad instance
+   • Paste images directly from File Explorer
    **• Add options to wrap selected text in brackets [] and // or remove brackets
    • Zoom in increments of 0.2 (a less drastic jump)
    • Major refactoring to have a more consistent naming scheme and remove old junk code
