Wrap text in brackets

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,7 +15,8 @@ Version 10.1 (April 12)
    • Reset indent menu option
    • Add "New Window" menu item to easily open a new Language Pad instance
    • Paste images directly from File Explorer
-   **• Add options to wrap selected text in brackets [] and // or remove brackets
+   • Add options to wrap selected text in brackets [] and // or remove brackets
+   **• Add shortcut keys to wrap text in brackets
    • Zoom in increments of 0.2 (a less drastic jump)
    • Major refactoring to have a more consistent naming scheme and remove old junk code
    • Bug Fix: Word count wouldn't update automatically when opening a new file
