--- a/Language Pad/Notebook/CharacterEditor.resx
+++ b/Language Pad/Notebook/CharacterEditor.resx
@@ -146,50 +146,50 @@
   <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO4SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YmLBMJRBo
-        Bl0GTHEilDp0g5lNoptmmuhM1tQtXmJiI4lbC2wLZfTCHSoto6W0YyXlYFNgGijh3httT29c32DwkV93
-        3As51B66lzzJJyfn5Jzneb6/c8nhHehA/5VEIjksFFYdEwqrBc+K90TnXmXs/18i0YXjMlmj1OXyjiwt
-        LVEp43LZJDd+/KGi4uLLTERilYnOF3o83tHt7W1sbW2lDPFxjD3uFYmq32QiEosUsNnsms3NTayvr6cM
-        8enW9smFwvNZTERikQJWK6XZ2NjA2toaJ8LRGGTaYSx6A0+PEZ/uHp2MU4GHD20acvHKygonfAEalbe0
-        uNSgh8O5ED9GfDq791FgdXUVsViME15/EJVyPW5QbohkevRYJ+Il9lWAGEYiEU64fX5U3NbjF+cqbo7R
-        KL1jhkw3AnV7Vx3HAsPqaDSKcDjMisbiwFWFaRefNxpRVKuHeGIFn4xGcc0RRUmTDUXi+rGC0osCJiKx
-        nhSwqkkQTdOsfKuxoFjzJyr73bs4N7iMK1QMZeYwzg5F8OlIDAXK37czPv51gCf47CUmZm+RAmazVR0K
-        hRAMBlmRqC14u30W7xvDKO9n552+UJx3H4TwoSkSPz/jC8WjI4XfvMZEsYsUGBgYUpNJ/X4/K+LmQRQq
-        Z1DeG0Lpb+yc7qbjlPTQEOlDENSN//3iZYXl+aJrrzBR7HqyAkOqQCAAn8/HyvX7JrwhpZAn/2MX+Xen
-        UdYVwqmWIE637TyIXUFkSqm/jlZJtbyTX77AxOwtUsBksqjIpF6vlxX98DhqOx89Rdpqxk8qI24q9OBL
-        OnFGQ6NYReMtpR853w/i1FcyqrCsms9EJBYpYDCYVWRSt9udFPPz85iamoJt1I4T4nacuU/jZJ0LuZJe
-        1LYaca9Jye01NBhMKjKpy+VKioWFBUxPT4OyO3Diegdyf3aiQNyBtgdDmJubQ1NzC7cPUV+fQUUmW1xc
-        TJqZmRnYxyaQ93Uryr/rgMlKYXJyMl5OqW6/zbnAv5MlC7kNk1NO1Kr7YR9/DKfTGS9FfBTNLbc4FdDp
-        jEoyFVk+rszOzsaDyZbs7/yU7K8AmYqYpAoZRKHQcCuw8x3oWl5ehsfjSRni09ahvZfsH9HhvDxBcdVH
-        NY0NDQqdXN5gSJX6+rv6sx9cuJOTI0hqBQ6lp6dnHHs9S5idm1+Tlc2/mirZ2fk1mZnHS9LS0o4yGUnp
-        EJ/Pf25ne+QZQHwOdKA9xOP9A/h6QI7pyIsnAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMarmfsDeLGQmI0XS/bGZFHjNgKB
+        RqwRcGOOQelkU9C4EXUzbsnmEptOs0uWrBnJtBXUUKQX7tDRIi2lFUvKIU0rboES7r3R9vTG9Q0Le8av
+        nvliHLoe6kue5JOTc3LO8zzf37nk8Ha1q/9KIpHsFQqrDguF1YIXxYeiMwcY+/+XSHTuiEzWIHW7fcPz
+        8/NU2rjdNsmNn36sqLjwOhORXGWis4Ver29kY2MD6+vraUN8HM6nPSJR9TtMRHKRAjabXbO2toaVlZW0
+        IT5d2l65UHg2m4lILlLAaqU0q6urWF5e5kQkFodMO4Q5X/D5MeLT1a2TcSrw6JFNQy5eXFzkhD9Io/KW
+        Fp/W6+FwzSaOEZ+Orh0UWFpaQjwe54QvEEKlXI8blAcimR7d1tFEiR0VIIbRaJQTHn8AFbf1+NW1hJtO
+        GqV3zZDphqFu67zDscCQOhaLIRKJsKKxOHBVYdrClQYjimr1EI8u4uJIDNccMZQ02lAkrnMeK70gYCKS
+        61kBq5oE0TTNyncaC4o1f6Kyz7OFMwML+JyKo8wcwenBKC4Nx1GgHNnI+uy3fp7gi9eYmO1FCpjNVnU4
+        HEYoFGJForbgvbYpfGSMoLyPnfd7wwk+eBjGJ6Zo4vysLxWP9xV++yYTxS5SoL9/UE0mDQQCrIibBlCo
+        nER5Txilv7NzsotOUNJNQ6QPQyB3/v3qZYXl5aJrbzBR7Hq2AoOqYDAIv9/PyvUHJrwtpZAv/2MLBfcm
+        UNYZxonmEE62bj6InSEclFJ/7a+SannHv3qFidlepIDJZFGRSX0+Hyv6oSeo7Xj8HGmLGT+rjLip0IMv
+        6cApDY1iFY13lQHk/jCAE1/LqMKyaj4TkVykgMFgVpFJPR5PSszMzGB8fBy2ETuOittw6gGN43fcyJP0
+        oLbFiPuNSm6vocFgUpFJ3W53SszOzmJiYgKU3YGj19uR94sLx8TtaH04iOnpaTQ2NXP7EPX2GlRksrm5
+        uZSZnJyE3TmK/G9aUP59O0xWCmNjY4lySnXbbc4F/p0sVchtGBt3oVbdB/uTp3C5XIlSxEfR1HyLUwGd
+        zqgkU5Hl48rU1FQimGzJ/uZPyc4KkKmISbqQQRQKDbcCm9+BzoWFBXi93rQhPq3t2vup/hHtzc8XFFed
+        r2mor1fo5PJ6Q7rU1d3Tn/743N3cXEFKK7AnMzMz6/Bb2cKcvIKa7Bz+1XTJySmoOXToSElGRsZ+JiMl
+        7eHz+S9tbve9AIjPrna1jXi8fwDOKECJFNzfxAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATrSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY50Wtsmm07ixGCcm
-        Ol+AmI03pVgoaHEKvsDJ1AhFKioGrbNq5oMJJAOmElyiVSfDIUxFeU1QCgKV8lhLwW5toYjAd/e3/JYs
-        +2vDNksWP8n3j1/uOfec8zv3nlzykv8VIMTqSJR1oEw4MU8mtC2QRpH32SXLc2o9sTkutJOfTXQfLpEs
-        RvkJ3pgscpL+cBiZxJpYFpnA9lCJeO5goXjR0OmN7q33zkXj5PopRinP1oM1sRxHIsl7X0Y7DCguJeFo
-        nKNGGuPw5M6ZMOwX2PYzbWHNLMexmImFFUd9R9qKY1GQON0oz1w8XJTmPZTFd5SyJpZDKiROx6LtB5sv
-        xOLh2WVoPP0xqr/yxwG+vWF/0BRn1sxyZEXYrDm33dPQmLMSNdK5qDvhA1n8dGN6hPN21sSyHIxyuCqX
-        eONulhfuUOVu5j7fw3OpEYvJBNbE/JQIyYcVBzy23kxzid/Pdxwqz/TCrXRXXEv1QEqEu2F7iBuXNbUM
-        l+LIAmWl0KBrFaO1NH6s7uv5KN/rColg2uCOME40a2YZ/P39hQGr/J9v2xSFgjN8NFUJoO/eAW1TAipz
-        Zw+UptqlnE8gDqy5eWGmXUzw0pKw0KBRkUiEtWuFCA5ajc0Jq3C1yA9td0JGyyQOecUi8gbrYj6uC4j9
-        LQnnkLI85tcbdOCk7w5DSEgAeLxgCAQCRPJCEBi4wiTmcc0/+eSbiW2FZMbBnsbdw6N6GZ71bcWQJha9
-        Cl+U5C+GKM4XQYGrwbTGz8/PvAmAXqcysWuK5naiccxwCqO6zzGsjcdgDw/9LcuoPoL60QLagiBkreMU
-        sm7m42ryq+HKW0LtqDEXY8Y8mDQ7YfpFAKPqU/TUe6Ov2Rs9DzzR38pHpdS58nw4mci6vjjF8TbeigsB
-        zSP6HBr8HAY1Ulq5CAPdfDxtjYS64QP0PpwF1T03aBR+qM73aiwWEBfW/cWgw8ajJmdh5TPtSYwajsOk
-        zYZetQmmnigMqnehrzWZXr356K6bAeXtqTQBX9QXeT/6bh1xZbcYP98KiGfVsXeuGDtSoW5Kem7SpNLg
-        ezDQyafBt+G3zl3QtgihafSC8q4LlFVc9LYEoa5gXtMLJ5BPr9vNvZxcTXUE2uUr1Q1Fi5T6zgPQtUXC
-        pP6MtiGVVrsW2uYV6K7lQFXjQ7/j8bQjGXdPzayVryGO7Fbj52IsmXk7+63LP2bOuNTTsGtM174Bxq5o
-        GjwDuvZQaB9vgfrBTKjuv4mOauY7iSaQhusZ9pep+xSqyVS2VNZU43qQWGWuJnPKst6WP6ndMGLoSseQ
-        NgNtVwIMzTcDx/oeh6Krxh1dDSFourYI/covoHm0EReSrbKpL3MImXfAVCpmJNtRvUL1r2Aeks4LuGRW
-        /hbnw3Xf+Dx5/NOakdIs1+ZeRQrtvx+9gj7oqArG/YtznulUaVCULhnICCAR1O91qr8mYU/159/4xzAZ
-        M85uVJ6hc8nyIxE2+77f516t+GH5QFdtDLp/XoeKk5z2+utL9TpVKsqyne4t4ZJ3WZ/XqKZRMe1gimFm
-        w7jeB0zmTCLMhm4LaYDdK8knOesn7Ly4w/p0ntDq4I1908orZdPrc+ImJFIbpmonqr+fA7PAVGBDxWzK
-        VMUEYH7v5MB5xCl89h/9ZtbHffBe8h9AyO/X9HkFY0/iHAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY0yBbbK5adxYjBMT
+        nE4eQrbyLsVCQYEpoiIMpkYo8lBr0BrLzHwwhGTIBIJLFHU6FMEHjNcUpSBQqRQpBbu1hSIC393f8luy
+        7K8N2yxZ/CTfP36559xzzu/ce3LJS/5XgBCTwxGmHIlgZpFEYF4ijiAfsEvG53g8McsXWFSd2uI4Xpnt
+        iev53ClJ+CzNoRAyizUxLhK++cFK4eLREqHH2InNjl0NhZE4Fm+lE3PNXVgT43E4nLx/hG81Ij23A0di
+        rJXiKKtHt0+GYB/ffJhpC2tmPI5GzTxTK/aa6K6IRknCfN2FHM/xMxnuYyKetZg1MR5iAbE5Gmk52lEW
+        jfun1qDtxCdo/MYX+3mztfsC5tiyZsZDFGa2vjDFRdtW4IUm8RK0fO0BSdx8XWaYbQprYlwORFhdrMp2
+        xx2RG25TFSY6P9/DtWsSCskM1sTwVArIR7X7XbZfy7CLy+VZj9XkuuFGpj0upbsgNcxRmxLk4MyaGodz
+        MWS5rE6gVXcJ8fBK3FTLt8tQs9ceWXyb0dQQp0jWzDj4+voK/Nb5Pk9KjEDJSR7a6/nQKFKhak9A7elF
+        I1fTLdLOJhAr1tywMNMuKnB1ZXAQZzI2NhYbNggQGOCPrQnrcLHUB123Aiers62KKmLJG6yL4bjMJ5Y3
+        sp0Oymoif71CB07m7hAEBfmByw0En89HODcIHM5avZDrbPjJV7WVmNdmLzigaNs9PqmR4NnQdowpozEo
+        9UZlsSdiY7wRwPEH0xofHx/DJgB6naqF9mnKmwm6Ke1xTKq/xLgqDqP9XAx3rqH6GAMPltMWBEC00ekM
+        62Y4Lia/Giq7IVBN6k5jSlcEvXIn9E/40Mk/R3+rO4Y63NF/1xXDXTzUiW3rzoaSmazri1MRZ+YuLfPr
+        mNAU0OCFGFWKaeWxGFHw8LQrHAP3PsTg/UWQNzhAKfVBY7FbWwWf2LHuLwYdNi5NBSvqnqmOYVKbD70q
+        Dxp5IvT9ERgd2IWhrmR69ZZB0bIAsltzaQLeaC11f/DDRmLPbjF9vucT1/qj71zQ9abjSXvSc70ynQbf
+        g5HHPBo8Cb893gVVpwDKNjfI7thBVu+Mwc4AtJQsbX/hBIrpdbu21+m0sjEMPVVeA/dKV8o0j/dD3R0O
+        /cAXtA3ptNoNUHWshaLZCfImD/odh6e9ybhzfGFz1XpizW41fcqjycJbeW+dv5674Jzi7q4pdc8m6Poi
+        afAsqHuCoXq4DQN3F0L+85vobWS+d9AEMnA5y/I8dZ9DNZvKnMqUaloPEpNcf7K4WvR2lax504S2LxNj
+        qix0n/fTSqs5U0MPg9HX5Ii+e0Fov7QSw7KvoHywGWXJJnnUlzmEzDtgLhUzki2oXqH6VzAPSdvlzmRR
+        8TbbQy3feTzqvLl+4qrIvmNQmkb770OvoAd66wPRUL74mVqeAenVVSNZfiSM+r1O9dckLKn+/Bv/GCZj
+        xtmByjV4Cfn0cJhZzo85jo3Sn9aM9DVHQfHLRtQec+ppubxao5anozrPpmGVM3mX9XmNah4V0w6mGGY2
+        TOt9wGTOJMJs6LCCBtjtRT4riJ+xszzV9ESRwOTAlZx5NXWS+a0FMTO2UBumahuqv58Dg8BUYEbFbMpU
+        xQRgfu9szlJiE/reH/1m1qd98F7yH0DI7yXceNWUh2/oAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -220,50 +220,50 @@
   <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO4SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YmLBMJRBo
-        Bl0GTHEilDp0g5lNoptmmuhM1tQtXmJiI4lbC2wLZfTCHSoto6W0YyXlYFNgGijh3httT29c32DwkV93
-        3As51B66lzzJJyfn5Jzneb6/c8nhHehA/5VEIjksFFYdEwqrBc+K90TnXmXs/18i0YXjMlmj1OXyjiwt
-        LVEp43LZJDd+/KGi4uLLTERilYnOF3o83tHt7W1sbW2lDPFxjD3uFYmq32QiEosUsNnsms3NTayvr6cM
-        8enW9smFwvNZTERikQJWK6XZ2NjA2toaJ8LRGGTaYSx6A0+PEZ/uHp2MU4GHD20acvHKygonfAEalbe0
-        uNSgh8O5ED9GfDq791FgdXUVsViME15/EJVyPW5QbohkevRYJ+Il9lWAGEYiEU64fX5U3NbjF+cqbo7R
-        KL1jhkw3AnV7Vx3HAsPqaDSKcDjMisbiwFWFaRefNxpRVKuHeGIFn4xGcc0RRUmTDUXi+rGC0osCJiKx
-        nhSwqkkQTdOsfKuxoFjzJyr73bs4N7iMK1QMZeYwzg5F8OlIDAXK37czPv51gCf47CUmZm+RAmazVR0K
-        hRAMBlmRqC14u30W7xvDKO9n552+UJx3H4TwoSkSPz/jC8WjI4XfvMZEsYsUGBgYUpNJ/X4/K+LmQRQq
-        Z1DeG0Lpb+yc7qbjlPTQEOlDENSN//3iZYXl+aJrrzBR7HqyAkOqQCAAn8/HyvX7JrwhpZAn/2MX+Xen
-        UdYVwqmWIE637TyIXUFkSqm/jlZJtbyTX77AxOwtUsBksqjIpF6vlxX98DhqOx89Rdpqxk8qI24q9OBL
-        OnFGQ6NYReMtpR853w/i1FcyqrCsms9EJBYpYDCYVWRSt9udFPPz85iamoJt1I4T4nacuU/jZJ0LuZJe
-        1LYaca9Jye01NBhMKjKpy+VKioWFBUxPT4OyO3Diegdyf3aiQNyBtgdDmJubQ1NzC7cPUV+fQUUmW1xc
-        TJqZmRnYxyaQ93Uryr/rgMlKYXJyMl5OqW6/zbnAv5MlC7kNk1NO1Kr7YR9/DKfTGS9FfBTNLbc4FdDp
-        jEoyFVk+rszOzsaDyZbs7/yU7K8AmYqYpAoZRKHQcCuw8x3oWl5ehsfjSRni09ahvZfsH9HhvDxBcdVH
-        NY0NDQqdXN5gSJX6+rv6sx9cuJOTI0hqBQ6lp6dnHHs9S5idm1+Tlc2/mirZ2fk1mZnHS9LS0o4yGUnp
-        EJ/Pf25ne+QZQHwOdKA9xOP9A/h6QI7pyIsnAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMarmfsDeLGQmI0XS/bGZFHjNgKB
+        RqwRcGOOQelkU9C4EXUzbsnmEptOs0uWrBnJtBXUUKQX7tDRIi2lFUvKIU0rboES7r3R9vTG9Q0Le8av
+        nvliHLoe6kue5JOTc3LO8zzf37nk8Ha1q/9KIpHsFQqrDguF1YIXxYeiMwcY+/+XSHTuiEzWIHW7fcPz
+        8/NU2rjdNsmNn36sqLjwOhORXGWis4Ver29kY2MD6+vraUN8HM6nPSJR9TtMRHKRAjabXbO2toaVlZW0
+        IT5d2l65UHg2m4lILlLAaqU0q6urWF5e5kQkFodMO4Q5X/D5MeLT1a2TcSrw6JFNQy5eXFzkhD9Io/KW
+        Fp/W6+FwzSaOEZ+Orh0UWFpaQjwe54QvEEKlXI8blAcimR7d1tFEiR0VIIbRaJQTHn8AFbf1+NW1hJtO
+        GqV3zZDphqFu67zDscCQOhaLIRKJsKKxOHBVYdrClQYjimr1EI8u4uJIDNccMZQ02lAkrnMeK70gYCKS
+        61kBq5oE0TTNyncaC4o1f6Kyz7OFMwML+JyKo8wcwenBKC4Nx1GgHNnI+uy3fp7gi9eYmO1FCpjNVnU4
+        HEYoFGJForbgvbYpfGSMoLyPnfd7wwk+eBjGJ6Zo4vysLxWP9xV++yYTxS5SoL9/UE0mDQQCrIibBlCo
+        nER5Txilv7NzsotOUNJNQ6QPQyB3/v3qZYXl5aJrbzBR7Hq2AoOqYDAIv9/PyvUHJrwtpZAv/2MLBfcm
+        UNYZxonmEE62bj6InSEclFJ/7a+SannHv3qFidlepIDJZFGRSX0+Hyv6oSeo7Xj8HGmLGT+rjLip0IMv
+        6cApDY1iFY13lQHk/jCAE1/LqMKyaj4TkVykgMFgVpFJPR5PSszMzGB8fBy2ETuOittw6gGN43fcyJP0
+        oLbFiPuNSm6vocFgUpFJ3W53SszOzmJiYgKU3YGj19uR94sLx8TtaH04iOnpaTQ2NXP7EPX2GlRksrm5
+        uZSZnJyE3TmK/G9aUP59O0xWCmNjY4lySnXbbc4F/p0sVchtGBt3oVbdB/uTp3C5XIlSxEfR1HyLUwGd
+        zqgkU5Hl48rU1FQimGzJ/uZPyc4KkKmISbqQQRQKDbcCm9+BzoWFBXi93rQhPq3t2vup/hHtzc8XFFed
+        r2mor1fo5PJ6Q7rU1d3Tn/743N3cXEFKK7AnMzMz6/Bb2cKcvIKa7Bz+1XTJySmoOXToSElGRsZ+JiMl
+        7eHz+S9tbve9AIjPrna1jXi8fwDOKECJFNzfxAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATrSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY50Wtsmm07ixGCcm
-        Ol+AmI03pVgoaHEKvsDJ1AhFKioGrbNq5oMJJAOmElyiVSfDIUxFeU1QCgKV8lhLwW5toYjAd/e3/JYs
-        +2vDNksWP8n3j1/uOfec8zv3nlzykv8VIMTqSJR1oEw4MU8mtC2QRpH32SXLc2o9sTkutJOfTXQfLpEs
-        RvkJ3pgscpL+cBiZxJpYFpnA9lCJeO5goXjR0OmN7q33zkXj5PopRinP1oM1sRxHIsl7X0Y7DCguJeFo
-        nKNGGuPw5M6ZMOwX2PYzbWHNLMexmImFFUd9R9qKY1GQON0oz1w8XJTmPZTFd5SyJpZDKiROx6LtB5sv
-        xOLh2WVoPP0xqr/yxwG+vWF/0BRn1sxyZEXYrDm33dPQmLMSNdK5qDvhA1n8dGN6hPN21sSyHIxyuCqX
-        eONulhfuUOVu5j7fw3OpEYvJBNbE/JQIyYcVBzy23kxzid/Pdxwqz/TCrXRXXEv1QEqEu2F7iBuXNbUM
-        l+LIAmWl0KBrFaO1NH6s7uv5KN/rColg2uCOME40a2YZ/P39hQGr/J9v2xSFgjN8NFUJoO/eAW1TAipz
-        Zw+UptqlnE8gDqy5eWGmXUzw0pKw0KBRkUiEtWuFCA5ajc0Jq3C1yA9td0JGyyQOecUi8gbrYj6uC4j9
-        LQnnkLI85tcbdOCk7w5DSEgAeLxgCAQCRPJCEBi4wiTmcc0/+eSbiW2FZMbBnsbdw6N6GZ71bcWQJha9
-        Cl+U5C+GKM4XQYGrwbTGz8/PvAmAXqcysWuK5naiccxwCqO6zzGsjcdgDw/9LcuoPoL60QLagiBkreMU
-        sm7m42ryq+HKW0LtqDEXY8Y8mDQ7YfpFAKPqU/TUe6Ov2Rs9DzzR38pHpdS58nw4mci6vjjF8TbeigsB
-        zSP6HBr8HAY1Ulq5CAPdfDxtjYS64QP0PpwF1T03aBR+qM73aiwWEBfW/cWgw8ajJmdh5TPtSYwajsOk
-        zYZetQmmnigMqnehrzWZXr356K6bAeXtqTQBX9QXeT/6bh1xZbcYP98KiGfVsXeuGDtSoW5Kem7SpNLg
-        ezDQyafBt+G3zl3QtgihafSC8q4LlFVc9LYEoa5gXtMLJ5BPr9vNvZxcTXUE2uUr1Q1Fi5T6zgPQtUXC
-        pP6MtiGVVrsW2uYV6K7lQFXjQ7/j8bQjGXdPzayVryGO7Fbj52IsmXk7+63LP2bOuNTTsGtM174Bxq5o
-        GjwDuvZQaB9vgfrBTKjuv4mOauY7iSaQhusZ9pep+xSqyVS2VNZU43qQWGWuJnPKst6WP6ndMGLoSseQ
-        NgNtVwIMzTcDx/oeh6Krxh1dDSFourYI/covoHm0EReSrbKpL3MImXfAVCpmJNtRvUL1r2Aeks4LuGRW
-        /hbnw3Xf+Dx5/NOakdIs1+ZeRQrtvx+9gj7oqArG/YtznulUaVCULhnICCAR1O91qr8mYU/159/4xzAZ
-        M85uVJ6hc8nyIxE2+77f516t+GH5QFdtDLp/XoeKk5z2+utL9TpVKsqyne4t4ZJ3WZ/XqKZRMe1gimFm
-        w7jeB0zmTCLMhm4LaYDdK8knOesn7Ly4w/p0ntDq4I1908orZdPrc+ImJFIbpmonqr+fA7PAVGBDxWzK
-        VMUEYH7v5MB5xCl89h/9ZtbHffBe8h9AyO/X9HkFY0/iHAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMgQFEcfCY0yBbbK5adxYjBMT
+        nE4eQrbyLsVCQYEpoiIMpkYo8lBr0BrLzHwwhGTIBIJLFHU6FMEHjNcUpSBQqRQpBbu1hSIC393f8luy
+        7K8N2yxZ/CTfP36559xzzu/ce3LJS/5XgBCTwxGmHIlgZpFEYF4ijiAfsEvG53g8McsXWFSd2uI4Xpnt
+        iev53ClJ+CzNoRAyizUxLhK++cFK4eLREqHH2InNjl0NhZE4Fm+lE3PNXVgT43E4nLx/hG81Ij23A0di
+        rJXiKKtHt0+GYB/ffJhpC2tmPI5GzTxTK/aa6K6IRknCfN2FHM/xMxnuYyKetZg1MR5iAbE5Gmk52lEW
+        jfun1qDtxCdo/MYX+3mztfsC5tiyZsZDFGa2vjDFRdtW4IUm8RK0fO0BSdx8XWaYbQprYlwORFhdrMp2
+        xx2RG25TFSY6P9/DtWsSCskM1sTwVArIR7X7XbZfy7CLy+VZj9XkuuFGpj0upbsgNcxRmxLk4MyaGodz
+        MWS5rE6gVXcJ8fBK3FTLt8tQs9ceWXyb0dQQp0jWzDj4+voK/Nb5Pk9KjEDJSR7a6/nQKFKhak9A7elF
+        I1fTLdLOJhAr1tywMNMuKnB1ZXAQZzI2NhYbNggQGOCPrQnrcLHUB123Aiers62KKmLJG6yL4bjMJ5Y3
+        sp0Oymoif71CB07m7hAEBfmByw0En89HODcIHM5avZDrbPjJV7WVmNdmLzigaNs9PqmR4NnQdowpozEo
+        9UZlsSdiY7wRwPEH0xofHx/DJgB6naqF9mnKmwm6Ke1xTKq/xLgqDqP9XAx3rqH6GAMPltMWBEC00ekM
+        62Y4Lia/Giq7IVBN6k5jSlcEvXIn9E/40Mk/R3+rO4Y63NF/1xXDXTzUiW3rzoaSmazri1MRZ+YuLfPr
+        mNAU0OCFGFWKaeWxGFHw8LQrHAP3PsTg/UWQNzhAKfVBY7FbWwWf2LHuLwYdNi5NBSvqnqmOYVKbD70q
+        Dxp5IvT9ERgd2IWhrmR69ZZB0bIAsltzaQLeaC11f/DDRmLPbjF9vucT1/qj71zQ9abjSXvSc70ynQbf
+        g5HHPBo8Cb893gVVpwDKNjfI7thBVu+Mwc4AtJQsbX/hBIrpdbu21+m0sjEMPVVeA/dKV8o0j/dD3R0O
+        /cAXtA3ptNoNUHWshaLZCfImD/odh6e9ybhzfGFz1XpizW41fcqjycJbeW+dv5674Jzi7q4pdc8m6Poi
+        afAsqHuCoXq4DQN3F0L+85vobWS+d9AEMnA5y/I8dZ9DNZvKnMqUaloPEpNcf7K4WvR2lax504S2LxNj
+        qix0n/fTSqs5U0MPg9HX5Ii+e0Fov7QSw7KvoHywGWXJJnnUlzmEzDtgLhUzki2oXqH6VzAPSdvlzmRR
+        8TbbQy3feTzqvLl+4qrIvmNQmkb770OvoAd66wPRUL74mVqeAenVVSNZfiSM+r1O9dckLKn+/Bv/GCZj
+        xtmByjV4Cfn0cJhZzo85jo3Sn9aM9DVHQfHLRtQec+ppubxao5anozrPpmGVM3mX9XmNah4V0w6mGGY2
+        TOt9wGTOJMJs6LCCBtjtRT4riJ+xszzV9ESRwOTAlZx5NXWS+a0FMTO2UBumahuqv58Dg8BUYEbFbMpU
+        xQRgfu9szlJiE/reH/1m1qd98F7yH0DI7yXceNWUh2/oAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="SearchToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -272,25 +272,25 @@
   <data name="SearchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQPSURBVFhH7ZZZaJRXFMdTqG2pD6lQFIRGS1uXmGUmk20y
-        k8nKNDH7JJnsoZnQSczEtCZjWpdQSx0VN9SIrfWhgkYfW1GwYKEQ8KEBkUgkkbQxlAa6pJYksyjJfNPf
-        KbcQn8okZuiDf/hx55t77znnnnu+e7+o5/rfy2AwRIMpNTW1KicnZ2d6erqdZ3N8fPwaNWRlpNfr1+Pw
-        QG5u7lhWVtZPeXl5Y/n5+XfgPs8P6BuFI8nJyW+oKc9ORqPRguORzMzMya6urstDQ0On5+fnTwaDwcOa
-        pn0yPDzcizwEci87O3s0KSnJqqYuXykpKRYMT7G6ezg6h9MLirNwHA4SxF7onpqa6iwoKPiGQH9hi5Yf
-        BHv7utlsHs3IyJgcHx8/hbMzcB6+BAngBHhw3icBwI7p6Wkr478jiB9l25SppYnU92HM7/F4xOlBOAr/
-        BiLtMZAM7IcecIVCIV1PT4+BudMmk+moMhW+SPuLVPgIhv6YnZ3dJ05w9hkOjtBKIMIh+JQ+6ZcAWumP
-        oV3L/B+YO0H7ijIZnkh/DGl8RJWPYbALdsN+HByQQBTivI//PqbdBUZ+b6Rdz7zzFotlFjtblMnwRPHp
-        WIG3sLBwBKNOjO4EWeUekBXLvkvqpQDl/+2M20L7Fm1MSUnJad6IgJwZymR4oorfpABnqOpfMdoE74ML
-        PgQ39MJH8AEUgB7iYJNkobi4+Bbp93EuxCmT4Sk2NvaltLS0n1nJk4GBgRYM14AD2gScvEdro82mzYBk
-        SJAsTExMbC4vL5+R+klISFitTIYvsnCBLQhi7K7f79+Ag3dAVimrTcOZmTYLngqgpqbmi9LS0iDbeFWZ
-        WpoSExM3cqr92draumCz2a4GAoG3cbIVEpXDdDBCKiRBXEdHxy6Hw7Eg9bPkAlws9tDB2+Brb28P1tfX
-        j/T397+Lo20gQYhTQT84OGhqbGy87nK5NN4AjfPjmDKxfBGEi3TOOZ1Oze12B9va2n5npbdwdgVuENxD
-        /l/o7OzUKNwQAWsVFRVeu91erkwsX2yFAW5j3F9ZWRnEcQinGk5DrFyj4p+Q8mHG/AaPJQsE4Kutre1V
-        Jp6NZF+hG76Cm3ARh24ytE36eXPW8fyA7wM/N6hG7Xgpyktkb9U/BiIhivc1nU53hyB8EkRVVZWXTNyu
-        rq6OVkNWXmTmVW7D78mGl6tctiPQ0NDwkELeoIasvOQwI4BrMMcXlNbc3DxfV1f3F4GkqCER0QsE8Pmi
-        ILSmpiYf2FR/ZEQAfeC1Wq1aS0uLxuHm58A6rLojIwLYI0EUFRVJABpvhp+a+JoL72U1ZOXFoeYEX1lZ
-        mRxWIb4ZhHrVHRmRBTsX3WNxzsk5LsWquiInPvf2cl98y4kZubPhuf5bUVF/A/UIxSeGz9FxAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQLSURBVFhH7ZZtaJNXFMcrqBP3QYUxQbAqc77UtE2avqVJ
+        01diu7a0TW1a+saa0rQ2tVMb62tRmZmi25hWdM4PG2zVj5soKCgMCn5YQUalo5VqFVlhat2w5kVp88Tf
+        kSu4T5LWBj/4hx83T+6955x77rn3eWLe652X0WhcBObU1NRNOTk5W9LT0x08W+Lj45eoIbMjg8GwDIcH
+        cnNzh7Oysu7k5eUN5+fn34C/eL5F3xAcSU5OXq6mvD2ZTCYrjgczMzPvdXR0/NLf3398cnLy21AodFjT
+        tP0DAwNdyEsgN7Ozs4eSkpJsaurMlZKSYsXwGKu7iaNTOD2rOAlfwyGC2APbx8bG2gsKCn4j0L/ZopkH
+        wd5+ZLFYhjIyMu6NjIx8h7MTcAZ+AAngG/DivFsCgM3j4+M2xl8jiNuybcrU9ETquzEW8Hq94vQQHIVX
+        gUh7DCQD+6AT3OFwWN/Z2Wlk7rjZbD6qTEUu0j6XCh/E0KOJiYm94gRnX+LgCK0EInwFB+mTfgmgif5Y
+        2o+Z/wdzR2kXKJORifTHksZ/qfJhDHbADtiHgwMSiEKcd/PfLtptYOL3StplzDtjtVonsLNOmYxMFJ+e
+        FfgKCwsHMerC6BaQVe4GWbHsu6ReClD+/4xx62g/oY0tKSk5zokIyp2hTEYmqngVBfiEqv4Ho/XQDG7Y
+        Ch7ogp3wBRSAAXSwRrJQXFx8lfT7uRd0ymRkiouLm5+WlnYfQ897e3sbMVwFTmgRcPI5rZ02mzYDkiFB
+        sjA6Orq2rKzsidRPQkLCh8pk5CILZ8lACGN/BgKBFTj4FGSVsto0nFlos+B/AVRVVX3PFoTYxvPK1PSU
+        mJi4krP8uKmpacput58PBoOrcbIeEpXDdDBBKiSBrq2tbZvT6ZyS+pl2Ab4u9tDJafC3tLSEampqBnt6
+        ejbiaANIEOJUMPT19Znr6uouut1ujROgcX8cUyZmLoJwk86nLpdL45IJEcxDVnoVZ+fgUmtr612PxzPV
+        3t6uUbhhAtbKy8t9DoejTJmYuXjBGOE6xgNsRwjHYZxqOA2zco2Kf07KBxjzAJ5JFgjAX11d3aVMvB3J
+        vsJ2+BEuw0849JChDdLPyVnK8y2dThfgDfoyExTlz2Rv3ksD0RDFu1iv198gCL8EUVFR4SMT1ysrKxep
+        IbMvMrOQE/Q72fDxKtdwHqytrb1LIa9QQ2ZfcpkRwAV4yheU1tDQMEkm/iOQFDUkKppDAKdfC0KjaP31
+        9fV21R8dEUA3+Gw2m9bY2KhxuQW4sA6r7uiIAHZLEEVFRRKA1tzcHKAmfuW6/0ANmX1xqbnAX1paKkc0
+        zDeDUKO6oyOy4OBF90ycc3OOSLGqruiJz709vC+ucGNG7254rzcrJuYFy6vE+gU08EkAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <metadata name="MainTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
