--- a/Language Pad/My Project/Resources.resx
+++ b/Language Pad/My Project/Resources.resx
@@ -145,6 +145,9 @@
   <data name="HtmlTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HtmlTemplate.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="PageExportHtml" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PageExportHtml.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="SmartReplace" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SmartReplace.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
