Add reverse markdown dependency

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,11 +23,13 @@ Version 11.0 (June 30)
    **• Re-add themes
    **• Faster loading of documents
    **• Adding, removing, renaming, and changing the order of pages are all much faster
+   • Improved splash screen
    • Major refactoring to have a more consistent naming scheme and remove old junk code
    • Bug Fix: Word count wouldn't update automatically when opening a new file
    • Bug Fix: Pages with the same name couldn't be imported without changing the name
    • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
    • Bug Fix: The bar above on affricate buttons in the character editor could sometimes be clipped off
+   • Bug Fix: Minor alignment issue on color panel with one button
    • Bug Fix: Encoding on exported HTML pages wasn't UTF-8 by default in some browsers
    
 ﻿Version 10.0 (April 8, 2020)
